--- a/future.html
+++ b/future.html
@@ -4,7 +4,7 @@
     <head>
         <title>My Honda Ridgeline</title>
         <meta name="viewport" content="width=device-width, initial scale=1.0">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
         <meta charset="utf-8">
     </head>
 <body>
